--- a/fancy_menus/public/index.html
+++ b/fancy_menus/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel='stylesheet' href='../src/cosmo_theme.css'>
+    <link rel='stylesheet' href='../src/cosmo_theme_min.css'>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -17,6 +21,9 @@
   </head>
   <body>
     <div id="root"></div>
+      <div id="khaleda">
+
+      </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -27,5 +34,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <link rel="stylesheet" href="../src/index.css">
   </body>
 </html>
