more stying and fix recipes new ingredient issue

--- a/fancy_menus/public/index.html
+++ b/fancy_menus/public/index.html
@@ -19,7 +19,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: rgb(159, 206, 154)">
     <div id="root"></div>
       <div id="khaleda">
 
@@ -34,6 +34,5 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <link rel="stylesheet" href="../src/index.css">
   </body>
 </html>
