--- a/fancy_menus/public/index.html
+++ b/fancy_menus/public/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
-    <link rel='stylesheet' href='../src/cosmo_theme.css'>
-    <link rel='stylesheet' href='../src/cosmo_theme_min.css'>
 
+    <link rel="stylesheet" type="text/css" href="../src/index.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -19,7 +18,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: rgb(159, 206, 154)">
+  <body class="body-background">
     <div id="root"></div>
       <div id="khaleda">
 
